# torna

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
bench/: Cargo.toml  PROGRAM_ID.txt  run.sh
bench/src/: parallel.rs
cpi/: Cargo.toml  README.md
cpi-probe/: Cargo.toml
cpi-probe/src/: lib.rs
cpi/src/: lib.rs
demo/: .gitignore  brand.md  next.config.ts  package-lock.json  package.json
demo/public/: sample-place-tx.json
demo/scripts/: bringup.ts  capture-tx.ts  cleanup-book.ts  setup-faucet.ts  smoke-match.ts  smoke-trade.ts  topup.ts
demo/src/app/: error.tsx  global-error.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
demo/src/app/api/activity/: route.ts
demo/src/app/api/book/: route.ts
demo/src/app/api/faucet/: route.ts
demo/src/app/docs/: page.tsx
demo/src/app/explorer/: page.tsx
demo/src/app/research/: page.tsx
demo/src/app/trade/: page.tsx
demo/src/components/: Compare.tsx  DevX.tsx  DocsContent.tsx  Explorer.tsx  Footer.tsx  Header.tsx  Hero.tsx  LiveMarket.tsx  MarketInfo.tsx  Nav.tsx  OrderBook.tsx  Parallelism.tsx  RecentTrades.tsx  Reveal.tsx  Terminal.tsx  Trade.tsx  WalletProviders.tsx
demo/src/components/diagrams/: BTree.tsx  Market.tsx  Mechanism.tsx  OrderKey.tsx  Throughput.tsx
demo/src/components/ui/: Address.tsx  CodeBlock.tsx  CopyButton.tsx  GithubIcon.tsx  LangTabs.tsx
demo/src/lib/: actions.ts  config.ts  market.json  market.ts  orderbook.ts  polyfill.ts  torna.ts  useBook.ts
integration/: Cargo.toml
integration/src/: alttest.rs  cpitest.rs  cu.rs  difftest.rs  fuzz.rs  inttest.rs  obtest.rs  sdktest.rs  smoke.rs
orderbook/: Cargo.toml
orderbook/src/: lib.rs
sbf/src/probe/: probe.c
sbf/src/torna/: torna.c
sdk/: Cargo.toml  README.md
sdk/src/: lib.rs
src/: node.h
test/: test_node.c  test_tree.c
ts-sdk/: README.md  package-lock.json  package.json  tsconfig.json
ts-sdk/src/: index.ts  keys.ts
ts-sdk/test/: e2e.test.ts  golden.test.ts  unit.test.ts
ts-sdk/vectors/: golden.json
