[package]
name = "torna-bench"
version = "0.1.0"
edition = "2021"

# Parallelism benchmark against a REAL solana-test-validator (Sealevel banking
# stage), not LiteSVM. Proves disjoint-leaf writes parallelize vs same-leaf /
# same-payer serialize, under CU-bound saturation. See spike-results.md Spike 1.

[[bin]]
name = "parallel"
path = "src/parallel.rs"

[dependencies]
solana-sdk = "3.0"
solana-client = "3.1"
solana-commitment-config = "3.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
