[package]
name = "torna-cpi"
version = "0.1.0"
edition = "2021"
description = "On-chain CPI helpers for Torna: drive the parallel, ordered, on-chain B+ tree index from your own Solana program, signing as a book-authority PDA. insert_fast / update_fast / delete_fast / insert_cold."
license = "MIT"
repository = "https://github.com/nzengi/torna"
homepage = "https://torna.vercel.app"
readme = "README.md"
keywords = ["solana", "cpi", "b-tree", "index", "orderbook"]
categories = ["cryptography::cryptocurrencies", "data-structures"]

# On-chain CPI helpers: let a Solana program drive Torna's hot path (InsertFast / UpdateFast /
# DeleteFast) by forwarding the client-resolved accounts and signing as a book-authority PDA. The
# generalized, reusable form of sbf/src/probe/probe.c. A library crate linked into programs, not a
# deployable program.

[lib]
crate-type = ["lib"]

[dependencies]
solana-program = "3.0"
